@@ -7,6 +7,7 @@ Revision history for Cassandra-Client
       * Rework shutdown() to not need asynchronous code
       * Rework the pool management logic
       * Support for UTF-8 authentication data
+      * Convenience method row_hashes() on a ResultSet
 
 0.09    2016/11/15
 
